docs: add ListWorkspaceUsers endpoint
