# interfaces/handler/user.go
@@ -8,6 +8,7 @@ import (
 
 	"github.com/go-chi/chi/v5"
 
+	"github.com/tusmasoma/connectHub-backend/entity"
 	"github.com/tusmasoma/connectHub-backend/internal/log"
 	"github.com/tusmasoma/connectHub-backend/usecase"
 )
@@ -50,6 +51,10 @@ type LoginRequest struct {
 	Password string `json:"password"`
 }
 
+type ListWorkspaceUsersResponse struct {
+	Users []entity.User `json:"users"`
+}
+
 func (uh *userHandler) GetUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	user, err := uh.auc.GetUserFromContext(ctx)
@@ -80,7 +85,7 @@ func (uh *userHandler) ListWorkspaceUsers(w http.ResponseWriter, r *http.Request
 	}
 
 	w.Header().Set("Content-Type", "application/json")
-	if err = json.NewEncoder(w).Encode(users); err != nil {
+	if err = json.NewEncoder(w).Encode(ListWorkspaceUsersResponse{Users: users}); err != nil {
 		log.Error("Failed to encode users to JSON", log.Ferror(err))
 		http.Error(w, "Failed to encode users to JSON", http.StatusInternalServerError)
 		w.WriteHeader(http.StatusInternalServerError)
